@@ -7,6 +7,10 @@ vorbis-tools 1.2.1 -- Unreleased
 * ogg123: return value to stop decoding after buffer is shut down (#1357)
 * oggenc: fixed a core dump while resampling from FLAC (#1316)
 * oggenc: fixed a typo in the Skeleton handling routine
+* oggenc: fixed remapping channels bug (#1326)
+* oggenc: support for WAVE_FORMAT_EXTENSIBLE headers (#1326)
+* oggenc: support for 32 bit WAV files (#1326)
+* oggenc: --ignorelength; support for WAV files > 4 GB (#1326)
 * ogginfo: support for information in Kate streams (#1360)
 * vcut: 64 bit fixes (#1366)
 * vorbiscomment: correct memory allocation (#472)
